scene: Handle Xwayland windows changing surfaces

Xwayland can re-create the wl_surface if the window has been previously
unmapped.

BUG: 442936
BUG: 426069


(cherry picked from commit 8ac93a59ffb1a09bf6df46c7012bea7910e6b883)